Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.1(EOL), 10.2(EOL), 10.3(EOL)
-
None
Description
Contains following Galera fixes:
- MW-405 Make sure wsrep is ready in wait_until_connected_again.inc
- wait_until_connected_again issues 'SHOW STATUS' query repeatedlyuntil mysqld replies without errors. However, SHOW STATUS is treated specially by wsrep in that it is allowed to proceed even if wsrep is not yet in ready state. As a consequence, after returning from wait_until_connected_again, wsrep may not be ready yet and subsequent queries may fail with error "1047 WSREP has not yet prepared node for application use". To avoid those errors, the patch includes wait_wsrep_ready.inc at the end of the wait_until_connected_again.inc
- kill_galera.inc can no longer rely on wait_until_connected_again.inc. This is because wait_until_connected_again now tries to make sure that the server it is connected eventually transition to ready state. Whereas some tests may need to kill galera while the server is in a non-primary view.
- MW-408 Fix 'WSREP error while trying to determine node state'
- mysql-test-run.pl sporadically reports 'WSREP error while trying to determine node state' right after starting servers for test execution. This happens because we try to execute a SELECT statement that queries the current value of status variable wsrep_ready. If this statement fails, the above message is reported. The failure is due to fact that wsrep may return error ER_LOCK_WAIT_TIMEOUT (on any SELECT statement) if it is not ready and wsrep_sync_wait enabled for SELECTs. The fix is to disable wsrep_sync_wait for the session that issues those SELECT statements.
Attachments
Issue Links
- blocks
-
MDEV-15301 Merge 25.3.23 from mysql-wsrep to 10.1
-
- Closed
-